src/css/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Agregue cualquier estilo global aquí */
body{
    font-family: 'Noto Sans JP', sans-serif;
    height: 100vh;
}
#___gatsby,
#gatsby-focus-wrapper{
    min-height: 100vh;
}
.btn-login{
    transition: all .3s ease-in-out;
    background: linear-gradient(180deg, #E8EEFB 0%, #E2E7EE 0.01%, rgba(255, 255, 255, 0) 100%), #ECF0F3;
    box-shadow: 7px 7px 15px #D1D9E6, -10px -10px 15px #FFFFFF;
    border-radius: 10px;
    @apply w-24 h-12 flex justify-center items-center
}
.btn-login:hover{
    background: linear-gradient(180deg, #FFFFFF 0%, #E2E7EE 100%), #ECF0F3;
}
.btn-login:active{
    box-shadow: inset 7px 7px 15px #D1D9E6, inset -10px -10px 15px #FFFFFF;
}
.input-form{
    @apply shadow appearance-none border rounded w-full p-3 text-gray-700 leading-none mb-2 text-sm
}
.input-form:focus{
    @apply outline-none shadow-outline
}
.label-form{
    @apply text-xs text-p_blue-200 inline-block
}
/* ---------------------------- */
/* Header */
/* --------ˇˇˇˇˇˇˇˇˇˇˇˇ-------- */
.header{
    display: grid;
    grid-template-columns: auto 1fr auto;
    @apply 
}
/* ---------------------------- */
/* Menu container */
/* --------ˇˇˇˇˇˇˇˇˇˇˇˇ-------- */
.menu-container{
    background: #FFFFFF;
    box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.03), 0px 2px 4px rgba(0, 0, 0, 0.4);
    @apply w-full px-5 py-2
}
.btn-add{
    box-shadow: 0px 3px 8px rgba(100, 140, 225, 0.7);
    @apply bg-p_blue-500 text-white rounded-full p-1
}
.btn-add:hover{
    @apply bg-p_blue-400
}
.btn-add:active{
    box-shadow: none;
}
/* ---------------------------- */
/* Details & Summary */
/* --------ˇˇˇˇˇˇˇˇˇˇˇˇ-------- */
summary::-webkit-details-marker{
    display: none
}
details[open] > summary {
    @apply border border-p_blue-600 border-b-0 outline-none shadow-outline
}

/* ---------------------------- */
/* Btn gen */
/* --------ˇˇˇˇˇˇˇˇˇˇˇˇ-------- */
.btn-gen{
    background: linear-gradient(180deg, #E2E7EE 0%, #FFFFFF 100%), #ECF0F3;
    @apply p-1 rounded shadow-md cursor-pointer
}
.btn-gen:active{
    @apply shadow-none
}

/* ---------------------------- */
/* Inner BTN */
/* --------ˇˇˇˇˇˇˇˇˇˇˇˇ-------- */
.tap-primary-blue-select{
    padding-top: .3rem;
    padding-bottom: .3rem;
    box-shadow: 0px 41.7776px 33.4221px rgba(84, 128, 222, 0.0086),
                0px 22.3363px 250px rgba(84, 128, 222, 0.106),
                0px 12.5216px 10.0172px rgba(84, 128, 222, 0.125),
                0px 6.6501px 5.32008px rgba(84, 128, 222, 0.15),
                0px 2.76726px 2.21381px rgba(84, 128, 222, 0.21);
    @apply bg-p_blue-500 text-white text-sm rounded-full px-3 font-light
}
.tap-primary-blue-disable{
    padding-top: .3rem;
    padding-bottom: .3rem;
    @apply bg-p_blue-100 text-p_blue-500 text-sm rounded-full px-3 font-light
}

/* ---------------------------- */
/* Menu Toggle */
/* --------ˇˇˇˇˇˇˇˇˇˇˇˇ-------- */
.bg-toggle{
    display: none;
    -moz-opacity: 0;
    opacity:0;
    filter: alpha(opacity=0);
    @apply bg-carbon-500 top-0 left-0 w-full h-screen fixed z-30
}

